# experimentalist

./: .gitignore  README.md
audio_visualiser/: Makefile  audio_viz.code-workspace  pyproject.toml
audio_visualiser/audio_viz/: animator.py  wav.py
audio_visualiser/notebooks/: simple_viz.ipynb
audio_visualiser/scripts/: convert_mp3_to_wave.py
fourier_transform/: pyproject.toml  use_cases.md
fourier_transform/libfft/: dft.py  notes.md
quadtree/: Cargo.toml  README.md  run.sh
quadtree/archive/: example.rs
quadtree/archive2/shaders/: circle.wgsl  triangle.wgsl
quadtree/src/: app.rs  example.rs  inst.rs  main.rs  quadtree.rs  state.rs  window.rs
quadtree/src/archive/: example.rs  window.rs
quadtree/src/archive2/: app.rs  inst.rs  state.rs
quadtree/src/save/: draw_triangle.rs
quadtree/src/shaders/: line.wgsl  triangle.wgsl
