[project]
name = "audio_viz"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.2",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling>=1.1.0"]  # Minimum hatchling version
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-env",
  "pytest-xdist",
  "ruff"
]

# uncomment when needed
[tool.uv.sources]
audio_viz = {path = "./audio_viz", editable = true}

[tools.ruff]
line-length = 100
indent-width = 4

[tools.ruff.lint]
preview = true
ignore = [
  "E731", # no lambda
]

target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

docstring-code-format = true
docstring-code-line-length = 30

# respect magic trailing commas
skip-magic-trailing-comma = false

# auto detect appropriate line ending
line-ending = "auto"


[tool.ruff.lint.pydocstyle]
convention = "google"


[tools.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
]
addopts = [
  "-vv"
]
env = [

]
